--- a/Vulkan/Vulkan.vcxproj
+++ b/Vulkan/Vulkan.vcxproj
@@ -93,12 +93,15 @@
     <ClCompile Include="logger.cpp" />
     <ClCompile Include="validation_layers.cpp" />
     <ClCompile Include="vulkan_instance.cpp" />
+    <ClCompile Include="window_glfw.cpp" />
     <ClCompile Include="_main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="logger.h" />
     <ClInclude Include="validation_layers.h" />
     <ClInclude Include="vulkan_instance.h" />
+    <ClInclude Include="window_glfw.h" />
+    <ClInclude Include="window_interface.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
