--- a/Vulkan/Vulkan.vcxproj.filters
+++ b/Vulkan/Vulkan.vcxproj.filters
@@ -5,6 +5,17 @@
     <ClCompile Include="window_glfw.cpp">
       <Filter>Window</Filter>
     </ClCompile>
+    <ClCompile Include="validation_layers.cpp">
+      <Filter>Kernal</Filter>
+    </ClCompile>
+    <ClCompile Include="vulkan_kernal.cpp" />
+    <ClCompile Include="validation.cpp">
+      <Filter>Initialization</Filter>
+    </ClCompile>
+    <ClCompile Include="instance.cpp" />
+    <ClCompile Include="vulkan_settings.cpp">
+      <Filter>Initialization</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="window_interface.h">
@@ -13,6 +24,17 @@
     <ClInclude Include="window_glfw.h">
       <Filter>Window</Filter>
     </ClInclude>
+    <ClInclude Include="validation_layers.h">
+      <Filter>Kernal</Filter>
+    </ClInclude>
+    <ClInclude Include="vulkan_kernal.h" />
+    <ClInclude Include="vulkan_settings.h">
+      <Filter>Initialization</Filter>
+    </ClInclude>
+    <ClInclude Include="validation.h">
+      <Filter>Initialization</Filter>
+    </ClInclude>
+    <ClInclude Include="instance.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Kernal">
@@ -20,6 +42,9 @@
     </Filter>
     <Filter Include="Window">
       <UniqueIdentifier>{3c20898e-66ca-4304-9ae1-5663f77fb09c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Initialization">
+      <UniqueIdentifier>{ce2d210c-1150-4178-8825-13a260c09808}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
