--- a/Vulkan/Vulkan.vcxproj
+++ b/Vulkan/Vulkan.vcxproj
@@ -93,8 +93,12 @@
     <ClCompile Include="instance.cpp" />
     <ClCompile Include="validation.cpp" />
     <ClCompile Include="validation_layers.cpp" />
+    <ClCompile Include="vulkan_logical_device.cpp" />
+    <ClCompile Include="vulkan_physical_device.cpp" />
     <ClCompile Include="vulkan_kernal.cpp" />
+    <ClCompile Include="vulkan_queue_family.cpp" />
     <ClCompile Include="vulkan_settings.cpp" />
+    <ClCompile Include="vulkan_swap_chain.cpp" />
     <ClCompile Include="window_glfw.cpp" />
     <ClCompile Include="_main.cpp" />
   </ItemGroup>
@@ -102,8 +106,12 @@
     <ClInclude Include="instance.h" />
     <ClInclude Include="validation.h" />
     <ClInclude Include="validation_layers.h" />
+    <ClInclude Include="vulkan_logical_device.h" />
+    <ClInclude Include="vulkan_physical_device.h" />
     <ClInclude Include="vulkan_kernal.h" />
+    <ClInclude Include="vulkan_queue_family.h" />
     <ClInclude Include="vulkan_settings.h" />
+    <ClInclude Include="vulkan_swap_chain.h" />
     <ClInclude Include="window_glfw.h" />
     <ClInclude Include="window_interface.h" />
   </ItemGroup>
