--- a/Vulkan/Vulkan.vcxproj.filters
+++ b/Vulkan/Vulkan.vcxproj.filters
@@ -16,6 +16,18 @@
     <ClCompile Include="vulkan_settings.cpp">
       <Filter>Initialization</Filter>
     </ClCompile>
+    <ClCompile Include="vulkan_physical_device.cpp">
+      <Filter>Initialization</Filter>
+    </ClCompile>
+    <ClCompile Include="vulkan_swap_chain.cpp">
+      <Filter>Initialization</Filter>
+    </ClCompile>
+    <ClCompile Include="vulkan_queue_family.cpp">
+      <Filter>Initialization</Filter>
+    </ClCompile>
+    <ClCompile Include="vulkan_logical_device.cpp">
+      <Filter>Initialization</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="window_interface.h">
@@ -35,6 +47,18 @@
       <Filter>Initialization</Filter>
     </ClInclude>
     <ClInclude Include="instance.h" />
+    <ClInclude Include="vulkan_physical_device.h">
+      <Filter>Initialization</Filter>
+    </ClInclude>
+    <ClInclude Include="vulkan_swap_chain.h">
+      <Filter>Initialization</Filter>
+    </ClInclude>
+    <ClInclude Include="vulkan_queue_family.h">
+      <Filter>Initialization</Filter>
+    </ClInclude>
+    <ClInclude Include="vulkan_logical_device.h">
+      <Filter>Initialization</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Kernal">
